plugins {
	id 'fabric-loom' version '1.9-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {

    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }

	maven { url 'https://maven.wispforest.io/releases/' }

	maven {
		name = "TarsosDSP repository"
		url = "https://mvn.0110.be/releases"
	}

}

fabricApi {
	configureDataGeneration()

}

loom {
	splitEnvironmentSourceSets()

	accessWidenerPath = file("src/main/resources/beatcraft.accesswidener")

	mods {
		"beatcraft" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
	// Vivecraft
	modImplementation "maven.modrinth:vivecraft:${project.vivecraft_version}-fabric"
	include(implementation('com.electronwill.night-config:toml:3.6.6'))
	include(implementation('com.electronwill.night-config:core:3.6.6'))
	include(implementation("org.lwjgl:lwjgl-openvr:3.3.3"))
	include(implementation("org.lwjgl:lwjgl-openvr:3.3.3:natives-linux"))
	include(implementation("org.lwjgl:lwjgl-openvr:3.3.3:natives-macos"))
	include(implementation("org.lwjgl:lwjgl-openvr:3.3.3:natives-windows"))
	include(implementation("com.illposed.osc:javaosc-core:0.9"))

	// BeatSaver
	modImplementation "io.wispforest:owo-lib:${project.owo_version}"
	include "io.wispforest:owo-sentinel:${project.owo_version}"

	// Spectrograms
	include(implementation('org.apache.commons:commons-math3:3.6.1'))

	// Vivify
	include(implementation('org.tukaani:xz:1.9'))
}


processResources {
	inputs.property "version", project.version
	inputs.property "minecraft_version", project.minecraft_version
	inputs.property "loader_version", project.loader_version
	inputs.property "vivecraft_version", project.vivecraft_version
	inputs.property "owo_version", project.owo_version
	filteringCharset "UTF-8"

	filesMatching("fabric.mod.json") {
		expand "version": project.version,
				"minecraft_version": project.minecraft_version,
				"loader_version": project.loader_version,
				"vivecraft_version": project.vivecraft_version
	}


}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}


java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21


}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}